syntax = "proto3";

package littlehorse;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "object_id.proto";

option go_package = ".;lhproto";
option java_multiple_files = true;
option java_package = "io.littlehorse.sdk.common.proto";
option csharp_namespace = "LittleHorse.Sdk.Common.Proto";


message MetricSpec {
  MetricSpecId id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Duration window_length = 3;
}

message PartitionMetric {
  PartitionMetricId id = 1;
  google.protobuf.Timestamp created_at = 2;
  repeated PartitionWindowedMetric active_windows = 3;
  google.protobuf.Duration window_length = 4;
}

message PartitionWindowedMetric {
  double value = 1;
  google.protobuf.Timestamp window_start = 2;
  int64 number_of_samples = 3;
}

message PartitionMetricId {
   MetricSpecId id = 1;
   TenantId tenant_id = 2;
}

// Metric value for a given MetricId
message Metric {
  // Unique id of the metric value
  MetricId id = 1;
  oneof value {
    // represents the value for a count-based metric
    int64 count = 2;
    // represents the average latency for a latency-based metric
    int64 latency_avg = 3;
  }
  // Indicates when the metric was created
  google.protobuf.Timestamp created_at = 4;
  map<int32, double> value_per_partition = 5;
}